Fix spacing for hourly forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -265,7 +265,7 @@ body {
 
     font-size: 1.2rem;
 
-    padding: 1rem 2rem;
+    padding: 0.75rem 2rem;
     gap: 0.1rem;
     border-radius: 2rem;
 
